--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,12 @@ body{
     background-color: rgb(20, 20, 19);
 }
 
+header{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+}
+
 .img{
     background-color: brown;
     height: 11rem;
@@ -22,4 +28,41 @@ body{
 .img img{
     height: 9rem;
     border-radius: 100%;
+}
+
+.conteiner-title{
+    width: 55%;
+    height: 7rem;
+    display: flex;
+    justify-content: end;
+    align-items: start;
+    flex-wrap: wrap;
+}
+
+.none{
+    background-color: bisque;
+    width: 90%; 
+    border-bottom-left-radius: 20px;
+}
+
+.title{
+    color: antiquewhite;
+    margin-right: 1rem;
+}
+
+.title h1{
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+.title h2{
+    font-size: 1rem;
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
+.title hr{
+    background-color: bisque;
+    height: 1px; 
+    border: none;
 }
