--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 header{
-    height: 100vh;
+    height: 11.7rem;
     width: 100vw;
     display: flex;
 }
@@ -41,8 +41,10 @@ header{
 
 .none{
     background-color: bisque;
-    width: 90%; 
+    width: 90%;
+    height: 1.5rem; 
     border-bottom-left-radius: 20px;
+    margin-bottom: 2rem;
 }
 
 .title{
@@ -65,4 +67,38 @@ header{
     background-color: bisque;
     height: 1px; 
     border: none;
+    margin-bottom: 3rem;
+}
+
+.conteiner-title-2{
+    width: 100%;
+    height: 1.5rem;
+    display: flex;
+    justify-content: end;
+    align-items: start;
+    flex-wrap: wrap;
+}
+
+.title-2{
+    background-color: brown;
+    color: antiquewhite;
+    width: 80%;
+    height: 2rem;
+    display: flex;
+    justify-content: end;
+    align-items: center; 
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin-bottom: 2rem;
+}
+
+.title-2 h2{
+    margin-right: 0.5rem;
+    font-size: 1.2rem;
+}
+
+.information{
+    background-color: aliceblue;
+    height: 35rem;
+    border-top-left-radius: 40px;
 }
