se ingreso la informacion de educacion en los respectivos contenedores en el index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,7 @@ header{
     border-top-left-radius: 40px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .Introduction{
