--- a/styles/style.css
+++ b/styles/style.css
@@ -119,3 +119,31 @@ header{
     color: rgb(49, 48, 47);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.education{
+    width: 95%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    margin: 0.5rem;
+}
+
+.education p{
+    font-size: 0.9rem;
+    color: rgb(49, 48, 47);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.negrilla{
+    font-size: 0.9rem;
+    color: rgb(49, 48, 47);
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.education h3{
+    font-size: 1.4rem;
+    color: rgb(49, 48, 47);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
