--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body{
 
 header{
     height: 11.7rem;
-    width: 100vw;
+    width: 100%;
     display: flex;
 }
 
@@ -190,9 +190,12 @@ header{
 .Projects-1{
     width: 100%;
     display: flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+}
+
+.conteiner-proyect-hr{
+    width: 5%;
 }
 
 .conteiner-project-1{
@@ -202,6 +205,8 @@ header{
     justify-content: end;
     align-items: center;
     background-color: rgb(212, 195, 173);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
 }
@@ -209,8 +214,8 @@ header{
 .Projects-2{
     width: 100%;
     display: flex;
-    justify-content: end;
-    align-items: end;
+    justify-content: center;
+    align-items: center;
 }
 
 .conteiner-project-2{
@@ -222,13 +227,15 @@ header{
     background-color: rgb(212, 195, 173);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 .Projects-3{
     width: 100%;
     display: flex;
-    justify-content: start;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -239,6 +246,8 @@ header{
     justify-content: end;
     align-items: center;
     background-color: rgb(212, 195, 173);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
 }
