--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(20, 20, 19);
+    background-color: rgb(41, 40, 38);
 }
 
 header{
@@ -155,7 +155,7 @@ header{
     width: 100%;
     height: 1.5rem;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -165,10 +165,12 @@ header{
     width: 45%;
     height: 2rem;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center; 
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     margin-top: 2.6rem;
 }
 
@@ -281,6 +283,7 @@ header{
     justify-content: center;
     flex-wrap: wrap;
     margin: 1rem;
+    text-align: center;
 }
 
 .info-projects h3{
@@ -288,3 +291,4 @@ header{
     color: rgb(49, 48, 47);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
