--- a/styles/style.css
+++ b/styles/style.css
@@ -292,3 +292,50 @@ header{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.conteiner-technical-skills{
+    width: 100%;
+    background-color: rgb(212, 195, 173);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.img-technical-skills img{
+    margin: 0.5rem;
+    height: 3.5rem;
+    margin-left: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.conteiner-title-4{
+    width: 100%;
+    height: 4.5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.title-4{
+    background-color: brown;
+    color: antiquewhite;
+    width: 70%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin-top: 2.6rem;
+}
+
+.title- h3{
+    margin-left: 0.5rem;
+    font-size: 1rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
