--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,7 @@ header{
 
 .conteiner-technical-skills{
     width: 100%;
+    height: 13rem;
     background-color: rgb(212, 195, 173);
     display: flex;
     justify-content: center;
@@ -334,7 +335,48 @@ header{
     margin-top: 2.6rem;
 }
 
-.title- h3{
+.title-4 h3{
+    margin-left: 0.5rem;
+    font-size: 1rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.references{
+    background-color: rgb(212, 195, 173);
+    width: 100%;
+    height: 20rem;
+}
+
+.conteiner-references{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.conteiner-title-5{
+    width: 100%;
+    height: 3.5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.title-5{
+    background-color: brown;
+    color: antiquewhite;
+    width: 70%;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+
+}
+
+.title-5 h3{
     margin-left: 0.5rem;
     font-size: 1rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
