--- a/styles/style.css
+++ b/styles/style.css
@@ -210,10 +210,10 @@ header{
     border-style: solid;
     border-width: 2px;
     border-color: brown;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .Projects-2{
@@ -233,10 +233,10 @@ header{
     border-style: solid;
     border-width: 2px;
     border-color: brown;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .Projects-3{
@@ -257,10 +257,10 @@ header{
     border-style: solid;
     border-width: 2px;
     border-color: brown;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .img-projects-1 img{
@@ -344,7 +344,9 @@ header{
 .references{
     background-color: rgb(212, 195, 173);
     width: 100%;
-    height: 20rem;
+    height: 10rem;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .conteiner-references{
@@ -380,4 +382,45 @@ header{
     margin-left: 0.5rem;
     font-size: 1rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.conteiner-none{
+    display: flex;
+    justify-content: center;
+}
+
+.none-2{
+    background-color: rgb(41, 40, 38);
+    width: 45%;
+    height: 1.5rem; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 2rem;
+}
+
+footer{
+    width: 100%;
+    height: 10rem;
+}
+
+footer h3{
+    text-align: center;
+    color: antiquewhite;
+    font-size: 1rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 1.5rem;
+}
+
+
+footer li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: antiquewhite;
+}
+
+footer li img{
+    height: 1.5rem;
+    margin-right: 0.5rem;
 }
