se puso un progress en la seccion de las skills y se le dio estilo con css

--- a/styles/style.css
+++ b/styles/style.css
@@ -313,6 +313,20 @@ header{
     margin-top: 1rem;
 }
 
+.img-technical-skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.progress{
+    width: 4rem;
+    display: flex;
+    justify-content: center;
+    accent-color: brown;
+}
+
 .conteiner-title-4{
     width: 100%;
     height: 4.5rem;
@@ -375,7 +389,7 @@ header{
     border-bottom-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-
+    margin-top: 0.5rem;
 }
 
 .title-5 h3{
