--- a/styles/style.css
+++ b/styles/style.css
@@ -286,6 +286,10 @@ header{
     text-align: center;
 }
 
+.info-projects p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .info-projects h3{
     font-size: 1.4rem;
     color: rgb(49, 48, 47);
@@ -301,6 +305,7 @@ header{
     flex-wrap: wrap;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    padding: 0.5rem;
 }
 
 .img-technical-skills img{
@@ -438,3 +443,73 @@ footer li img{
     height: 1.5rem;
     margin-right: 0.5rem;
 }
+
+@media screen and (min-width: 430px) and (max-width: 479px) { 
+    .title h1{
+        font-size: 2.2rem;
+    }
+
+    .title {
+        padding-right: 1rem;
+    }
+
+    .img{
+        width: 40%;
+    }
+
+    .img img{
+        height: 8.5rem;
+        border-radius: 100%;
+    }
+
+    .conteiner-title{
+        width: 60%;
+    }
+    
+    .conteiner-technical-skills{
+        height: 15rem;
+    }
+
+    .img-technical-skills img{
+        height: 3.8rem;
+    }
+   }
+
+@media screen and (min-width: 431px) and (max-width: 490px) { 
+    .title h1{
+        font-size: 2.4rem;
+    }
+
+    .title {
+        padding-right: 1.5rem;
+    }
+
+    .img{
+        width: 40%;
+    }
+
+    .img img{
+        height: 9.5rem;
+        border-radius: 100%;
+    }
+
+    .conteiner-title{
+        width: 60%;
+    }
+
+    .information p{
+        font-size: 1rem;
+    }
+
+    .info-projects p{
+        font-size: 1rem;
+    }
+
+    .conteiner-technical-skills{
+        height: 15rem;
+    }
+
+    .img-technical-skills img{
+        height: 4.5rem;
+    }
+   }
