se arreglo un problema con lo anterior cambiado en los estilos

--- a/styles/style.css
+++ b/styles/style.css
@@ -465,6 +465,12 @@ footer li img{
     .conteiner-title{
         width: 60%;
     }
+
+    .information p{
+        font-size: 0.9rem;
+        padding: 0 0.5rem 0 0.5rem;
+    }
+
     
     .conteiner-technical-skills{
         height: 15rem;
@@ -499,6 +505,11 @@ footer li img{
 
     .information p{
         font-size: 1rem;
+        padding: 0 0.5rem 0 0.5rem;
+    }
+
+    .title-3{
+        margin-top: 1.7rem;
     }
 
     .info-projects p{
